# bin-day

./: Cargo.toml  README.md
src/: main.rs
systemd/: bin-day.service  bin-day.timer
