[package]
name = "bin-day"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["Jack Allnutt <jack@allnutt.net>"]
license = "GPL-3.0-or-later"

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["std", "serde"] }
cssparser = "0.29.6"
hmac = "0.12.1"
reqwest = { version = "0.11.18", default-features = false, features = ["gzip", "json", "rustls-tls"] }
scraper = { version = "0.13.0", default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.81"
sha2 = "0.10.7"
tokio = { version = "1.18.2", features = ["macros", "rt"] }

[profile.release]
opt-level = 3
lto = "fat"
strip = true
